--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # do not ignore .pre-commit-config.yaml
 !.pre-commit-config.yaml
 
+# do not ignore .env.example
+!.env.example
+
 # ignore Python cache
 **/__pycache__/
 
