fix(deploy): correct env variable name for timescaledb

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
-DB_PASSWORD=changeme  # Use a strong password in production
+DB_PASSWORD=changeme  # Used by the application
+POSTGRES_PASSWORD=changeme  # Must match DB_PASSWORD, used by Docker
 
 # OpenRouter Configuration
 OPENROUTER_API_KEY=your_api_key_here
