--- a/.github/workflows/render-notebook.yml
+++ b/.github/workflows/render-notebook.yml
@@ -12,6 +12,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for gh-pages branch creation
+          token: ${{ secrets.GITHUB_TOKEN }}  # Use GitHub token for authentication
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -73,6 +74,9 @@ jobs:
           git add eda/yandex-reviews-eda.py eda/yandex-reviews-eda.ipynb
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git commit -m "chore: update rendered notebook from main@${GITHUB_SHA}"
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
           git push origin gh-pages
